force-app/main/default/objects/Audit__c/fields/Amount_Found_Due__c.field-meta.xml
<CustomField>
    <fullName>Amount_Found_Due__c</fullName>
    <label>Amount Found Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>