force-app/main/default/objects/Audit__c/fields/Audit_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Audit_Start_Date__c</fullName>
    <label>Audit Start Date</label>
    <type>Date</type>
</CustomField>