force-app/main/default/objects/Audit__c/fields/Audit_Type__c.field-meta.xml
<CustomField>
    <fullName>Audit_Type__c</fullName>
    <label>Audit Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Employer Self-Audit</fullName>
            </value>
            <value>
                <fullName>DLSE Auditor</fullName>
            </value>
            <value>
                <fullName>DLSE Deputy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>