force-app/main/default/objects/Audit__c/fields/DLSE_Auditor_Name_if_applicable__c.field-meta.xml
<CustomField>
    <fullName>DLSE_Auditor_Name_if_applicable__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup up to Internal Employee record with title of Payroll Auditor.</description>
    <label>DLSE Auditor Name (if applicable)</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>DIR_Employee__c.Title__c</field>
            <operation>equals</operation>
            <value>Payroll Auditor</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>DIR_Employee__c</referenceTo>
    <relationshipLabel>Audits</relationshipLabel>
    <relationshipName>Audits</relationshipName>
    <type>Lookup</type>
</CustomField>