force-app/main/default/objects/Audit__c/fields/Self_Audit_Contract_Date_if_applicable__c.field-meta.xml
<CustomField>
    <fullName>Self_Audit_Contract_Date_if_applicable__c</fullName>
    <label>Self-Audit Contract Date (if applicable)</label>
    <type>Date</type>
</CustomField>