force-app/main/default/objects/Audit__c/fields/Total_Hours_to_Complete_Audit__c.field-meta.xml
<CustomField>
    <fullName>Total_Hours_to_Complete_Audit__c</fullName>
    <label>Total Hours to Complete Audit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>