force-app/main/default/objects/Audit__c/fields/Violation_Type__c.field-meta.xml
<CustomField>
    <fullName>Violation_Type__c</fullName>
    <label>Violation Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Minimum Wage</fullName>
            </value>
            <value>
                <fullName>Overtime</fullName>
            </value>
            <value>
                <fullName>Rest Period Premium</fullName>
            </value>
            <value>
                <fullName>Meal Period Premium</fullName>
            </value>
            <value>
                <fullName>Split Shift Premium</fullName>
            </value>
            <value>
                <fullName>Reporting Time Pay</fullName>
            </value>
            <value>
                <fullName>Unpaid Wages – Contract Rate</fullName>
            </value>
            <value>
                <fullName>Unpaid Wages – Commission</fullName>
            </value>
            <value>
                <fullName>Unpaid Wages – Bonus</fullName>
            </value>
            <value>
                <fullName>Unpaid Wages – Vacation</fullName>
            </value>
            <value>
                <fullName>Non-Wages – Mileage</fullName>
            </value>
            <value>
                <fullName>Non-Wages – Illegal Deductions</fullName>
            </value>
            <value>
                <fullName>Non-Wages – Liquidated Damages</fullName>
            </value>
            <value>
                <fullName>Non-Wages – Tips</fullName>
            </value>
            <value>
                <fullName>Non-Wages – Waiting Time Penalties</fullName>
            </value>
            <value>
                <fullName>Non-Wages – Other</fullName>
            </value>
            <value>
                <fullName>Reimbursable Expenses LC 2802</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>