force-app/main/default/objects/Audit__c/fields/Wage_Assessment_Period__c.field-meta.xml
<CustomField>
    <fullName>Wage_Assessment_Period__c</fullName>
    <label>Wage Assessment Period</label>
    <length>255</length>
    <type>Text</type>
</CustomField>